# fprime-samd

./: .gitignore  library.cmake
cmake/: FindCMSIS.cmake
cmake/platform/: Samd21.cmake
cmake/toolchain/: microchip_curiosity.cmake  qtpy.cmake  samd21-bare-toolchain.cmake  samd21-common.cmake
config-samd/: CMakeLists.txt  DmaDriverConfig.hpp  RtcDriverConfig.hpp  Samd21SpiConfig.fpp
fprime-samd/Drv/: CMakeLists.txt
fprime-samd/Drv/DmaDriver/: CMakeLists.txt  DmaChannel.cpp  DmaChannel.hpp  DmaDriver.cpp  DmaDriver.fpp  DmaDriver.hpp  DmaDriverIsr.cpp
fprime-samd/Drv/GpioDriver/: CMakeLists.txt  GpioDriver.cpp  GpioDriver.fpp  GpioDriver.hpp
fprime-samd/Drv/I2cDriver/: CMakeLists.txt  I2cDriver.cpp  I2cDriver.fpp  I2cDriver.hpp  I2cDriverHardware.cpp  I2cDriverHardware.hpp  I2cDriverHardwareStub.cpp
fprime-samd/Drv/RtcDriver/: CMakeLists.txt  DefaultRawTime.cpp  RawTime.cpp  RawTime.hpp  RtcDriver.cpp  RtcDriver.fpp  RtcDriver.hpp  RtcDriverHardware.cpp  RtcDriverHardware.hpp  RtcDriverHardwareStub.cpp  RtcDriverIsr.cpp
fprime-samd/Mcu/: CMakeLists.txt  Delay.hpp  Handlers.c  Handlers.h  Reset.cpp  SysTickStubs.c  SystemInit.c  SystemInit.h  reset.c
fprime-samd/Os/: CMakeLists.txt  ConditionVariable.cpp  ConditionVariable.hpp  Console.cpp  Console.hpp  DefaultConsole.cpp  DefaultMutex.cpp  Mutex.cpp  Mutex.hpp
fprime-samd/Overrides/: CMakeLists.txt  reset_assert_hook.cpp  snprintf_format.cpp  sscanf_scan.cpp
fprime-samd/Svc/: CMakeLists.txt
fprime-samd/config/: CMakeLists.txt  DmaDriverConfig.hpp  FramerConfig.hpp  UsartDriverConfig.hpp
(+78 files in other folders)
